--- a/server/package.json
+++ b/server/package.json
@@ -31,11 +31,15 @@
         "nanoid": "^5.0.3",
         "zod": "^3.23.8",
         "helmet": "^7.0.0",
-        "express-rate-limit": "^7.0.0"
+        "express-rate-limit": "^7.0.0",
+        "nodemailer": "^6.9.9"
     },
     "devDependencies": {
         "@types/node": "^22.10.7",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.3"
+        "typescript": "^5.7.3",
+        "@types/helmet": "^0.0.48",
+        "@types/express-rate-limit": "^5.1.3",
+        "@types/nodemailer": "^6.4.7"
     }
 }
